fix horizontal scrolling and other minor issues

--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -103,7 +103,7 @@
   }
 
   .about__image {
-    width: 300px;
+    width: 100%;
     height: 100%;
   }
 
