--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -5,12 +5,11 @@
   flex-direction: column;
   max-width: 1440px;
   margin: 0 auto;
-  overflow: hidden;
 }
 
 .page__content {
   height: 100%;
-  padding: 0 20px;
+  box-sizing: border-box;
   flex: 1;
   display: flex;
   flex-direction: column;
@@ -31,7 +30,7 @@ input:-webkit-autofill:active {
 
 @media (max-width: 375px) {
   .page {
-    max-width: 320px;
+    max-width: 375px;
   }
 
   .page__content {
