--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -5,6 +5,7 @@
   margin-top: auto;
   flex-shrink: 0;
   height: 80px;
+  padding: 0 40px;
 }
 
 .footer__copyright {
