--- a/src/components/SavedNews/SavedNews.css
+++ b/src/components/SavedNews/SavedNews.css
@@ -23,6 +23,12 @@
   font-weight: 500;
 }
 
+@media screen and (min-width: 376px) and (max-width: 768px) {
+  .saved__info {
+    padding: 40px 40px 56px;
+  }
+}
+
 @media screen and (max-width: 375px) {
   .saved__info {
     padding: 8px 16px 32px;
