--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -90,11 +90,12 @@
     flex-direction: column;
     align-items: flex-start;
     height: 334px;
-    padding: 38px 20% 48px 20%;
+    padding: 38px 40px 48px 40px;
   }
 
   .search__title {
-    width: 385px;
+    width: 100%;
+    max-width: 385px;
     font-size: 36px;
     line-height: 40px;
     margin: 0 0 16px 0;
@@ -109,7 +110,8 @@
     margin-bottom: 48px;
     line-height: 24px;
     margin: 0 0 48px 0;
-    width: 452px;
+    width: 100%;
+    max-width: 452px;
   }
 
   .search__form_controls {
@@ -127,14 +129,14 @@
     position: relative;
     width: 100%;
     height: 56px;
-    width: 463px;
+    max-width: 463px;
   }
 
   .search__button {
     width: 160px;
     height: 56px;
     position: absolute;
-    right: 120px;
+    right: 0;
   }
 }
 
@@ -142,7 +144,6 @@
   .search__container {
     padding: 0;
     max-height: 480px;
-    max-width: 320px;
   }
 
   .search {
